# MctBot

./: .gitignore  Cargo.toml  Dockerfile  MctBot.csproj  Program.cs  README.md  compose.dev.yaml  example.env
src/: main.rs
src/commands/: balance.rs  mod.rs  ping.rs  register.rs
