[package]
name = "MctBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
postgres = "0.19.7"
serenity = "0.12.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
